# nerdaxe-ha

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  hacs.yml
custom_components/nerdaxe_miner/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  history_store.py  manifest.json  models.py  normalizer.py  number.py  select.py  sensor.py  strings.json
tests/: __init__.py  test_api.py  test_coordinator.py  test_history_store.py  test_homeassistant_imports.py  test_normalizer.py
