[project]
name = "nerdaxe-ha"
version = "0.1.0"
description = "Home Assistant HACS integration for NerdAxe / NerdQAxe / ESP-Miner compatible Bitcoin miners"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ottenchris" }]
dependencies = []

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]
namespaces = true

[project.optional-dependencies]
test = [
  "homeassistant>=2025.1.0",
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM"]
ignore = [
  "E501"
]
